--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,11 +57,11 @@
       </section>
       <footer>
         {% if site.researchgate %}
-        <class="view"><a href="{{ site.researchgate }}">View My Research Gate Scholar Profile</a><br>
+        <small><class="view"><a href="{{ site.researchgate }}">ResearchGate</a>
         {% endif %}
           
         {% if site.linkedin %}
-        <small><class="view"><a href="{{ site.linkedin }}">View My LinkedIn Profile</a></p>
+        <small><class="view"><a href="{{ site.linkedin }}">&mdash; LinkedIn </a></p>
         {% endif %}
           
         {% if site.github.is_project_page %}
