--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,5 +72,22 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+     <footer>
+        {% if site.github.is_user_page %}
+        <small><class="view"><a href="{{ site.github.owner_url }}">GitHub </a>
+        {% endif %}
+        
+        {% if site.gscholar %}
+        &mdash;<small><class="view"><a href="{{ site.gscholar }}"> Goole Scholar </a>
+        {% endif %}
+          
+        {% if site.researchgate %}
+        &mdash;<small><class="view"><a href="{{ site.researchgate }}"> ResearchGate </a>
+        {% endif %}
+          
+        {% if site.linkedin %}
+        &mdash;<small><class="view"><a href="{{ site.linkedin }}"> LinkedIn </a></p>
+        {% endif %}
+      </footer>
   </body>
 </html>
