--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper" size="6">
+    <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <size="6"><h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | absolute_url}}" width="230" alt="Logo" />
