--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <f font size="4"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></f>
+        <f font size="7"><b><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></b></f>
         
         {% if site.logo %}
           <img src="{{site.logo | absolute_url}}" width="230" alt="Logo" />
