--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,19 +35,19 @@
         {% endif %}
         
         {% if site.github.is_user_page %}
-        <small><class="view"><a href="{{ site.github.owner_url }}">GitHub </a>
+        <small><class="view"><a href="{{ site.github.owner_url }}">GitHub </a></small>
         {% endif %}
         
         {% if site.gscholar %}
-        &mdash;<small><class="view"><a href="{{ site.gscholar }}"> Goole Scholar </a>
+        &mdash;<small><class="view"><a href="{{ site.gscholar }}"> Goole Scholar </a></small>
         {% endif %}
           
         {% if site.researchgate %}
-        &mdash;<small><class="view"><a href="{{ site.researchgate }}"> ResearchGate </a>
+        &mdash;<small><class="view"><a href="{{ site.researchgate }}"> ResearchGate </a></small>
         {% endif %}
           
         {% if site.linkedin %}
-        &mdash;<small><class="view"><a href="{{ site.linkedin }}"> LinkedIn </a></p>
+        &mdash;<small><class="view"><a href="{{ site.linkedin }}"> LinkedIn </a></p></small>
         {% endif %}
       </header>
       <section>
