--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,15 +39,15 @@
         {% endif %}
         
         {% if site.gscholar %}
-        &mdash;<small><class="view"><a href="{{ site.gscholar }}"> Goole Scholar </a></small>
+        <small><class="view"><a href="{{ site.gscholar }}"> Goole Scholar </a></small>
         {% endif %}
           
         {% if site.researchgate %}
-        &mdash;<small><class="view"><a href="{{ site.researchgate }}"> ResearchGate </a></small>
+        <small><class="view"><a href="{{ site.researchgate }}"> ResearchGate </a></small>
         {% endif %}
           
         {% if site.linkedin %}
-        &mdash;<small><class="view"><a href="{{ site.linkedin }}"> LinkedIn </a></p></small>
+        <small><class="view"><a href="{{ site.linkedin }}"> LinkedIn </a></p></small>
         {% endif %}
       </header>
       <section>
