--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
         </ul>
         {% endif %}
         
+        <small>Other links of interest:</small><br>
+        
         {% if site.github.is_user_page %}
         <small><class="view"><a href="{{ site.github.owner_url }}">GitHub </a></small>
         {% endif %}
