--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper" style="background-image: url('personal/photo.png');">
+    <div class="wrapper" style="background-image: personal/photo.png;">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
