--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,7 @@
     <![endif]-->
   </head>
   <body>
-    background-image: personal/photo.png;
-    background-repeat: no-repeat;
-    <div class="wrapper">
+    <div class="wrapper" style="background-image: personal/photo.png">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
