--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
-        <p>{{ site.contact | default: site.github.project_tagline }}</p>
+        <p>{<b>Contact:</b> { site.contact | default: site.github.project_tagline }}</p>
         
         <p>{{ site.bookmarks | default: site.github.project_tagline }}</p>
 
