--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-          <img src="{{site.logo | absolute_url}}" width="230" alt="Logo" />
+          <img src="{{site.logo | absolute_url}}" width="230" alt="Logo" /><br>
         {% endif %}
 
         {% if site.orcid %}
