--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,19 +53,19 @@
         <small>Other links of interest:</small><br>
         
         {% if site.github.is_user_page %}
-        <small><class="view"><a href="{{ site.github.owner_url }}" rel="noopener noreferrer">GitHub </a></small>
+        <small><class="view"><a href="{{ site.github.owner_url }}" target="github.widget" rel="noopener noreferrer">GitHub </a></small>
         {% endif %}
         
         {% if site.gscholar %}
-        <small><class="view"><a href="{{ site.gscholar }}" rel="noopener noreferrer"> Goole Scholar </a></small>
+        <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Goole Scholar </a></small>
         {% endif %}
           
         {% if site.researchgate %}
-        <small><class="view"><a href="{{ site.researchgate }}" rel="noopener noreferrer"> ResearchGate </a></small>
+        <small><class="view"><a href="{{ site.researchgate }}" target="researchgate.widget" rel="noopener noreferrer"> ResearchGate </a></small>
         {% endif %}
           
         {% if site.linkedin %}
-        <small><class="view"><a href="{{ site.linkedin }}" rel="noopener noreferrer"> LinkedIn </a></p></small>
+        <small><class="view"><a href="{{ site.linkedin }}" target="linkedin.widget" rel="noopener noreferrer"> LinkedIn </a></p></small>
         {% endif %}
       </header>
       <section>
