--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         {% endif %}
        
         {% if site.contact %}
-        <p><b>Contact Information: </b>{{ site.contact | default: site.github.project_tagline }}</p>
+        <p><b>Contact Information:<br></b>{{ site.contact | default: site.github.project_tagline }}</p>
         {% endif %}
 
         {% if site.bookmarks %}
