--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,26 +16,26 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
-        {% if site.logo %}
-          <img src="{{site.logo | absolute_url}}" width="230" alt="Logo" /><br>
-        {% endif %}
-
         {% if site.orcid %}
         <class="view"><a href="{{ site.orcid }}" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6261-8699</a><br>
         {% endif %}
+        
+        {% if site.logo %}
+          <img src="{{site.logo | absolute_url}}" width="230" alt="Logo" />
+        {% endif %}
           
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-
+          
+        {% if site.bookmarks %}
+        <p>{{ site.bookmarks | default: site.github.project_tagline }}</p>
+        {% endif %}
+          
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a><br>
         {% endif %}
        
         {% if site.contact %}
         <p><b>Contact Information:<br></b>{{ site.contact | default: site.github.project_tagline }}</p>
-        {% endif %}
-
-        {% if site.bookmarks %}
-        <p>{{ site.bookmarks | default: site.github.project_tagline }}</p>
         {% endif %}
 
         {% if site.github.is_project_page %}
