--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% endif %}
         
         {% if site.orcid %}
-        <class="view"><a href="{{ site.orcid }}" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6261-8699</a><br>
+        <br><class="view"><a href="{{ site.orcid }}" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6261-8699</a><br>
         {% endif %}
           
         <p>{{ site.description | default: site.github.project_tagline }}</p>
