adding HAL link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,10 @@
         {% if site.gscholar %}
         <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Goole Scholar </a></small>
         {% endif %}
+
+	{% if site.HAL %}
+        <small><class="view"><a href="{{ site.HAL }}" target="HAL.widget" rel="noopener noreferrer"> HAL </a></p></small>
+        {% endif %}
           
         {% if site.researchgate %}
         <small><class="view"><a href="{{ site.researchgate }}" target="researchgate.widget" rel="noopener noreferrer"> ResearchGate </a></small>
