--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         {% endif %}
         
         {% if site.gscholar %}
-        <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Goole Scholar </a></small>
+        <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Goole </a></small>
         {% endif %}
 
 	{% if site.HAL %}
