--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
         {% endif %}
         
         {% if site.gscholar %}
-        <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Goole </a></small>
-        {% endif %}
+        <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Goole Scholar </a></small>
+        {% endif %}<br>
 
 	{% if site.HAL %}
         <small><class="view"><a href="{{ site.HAL }}" target="HAL.widget" rel="noopener noreferrer"> HAL </a></p></small>
