--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,8 @@
         {% endif %}
 
 	{% if site.HAL %}
-        <small><class="view"><a href="{{ site.HAL }}" target="HAL.widget" rel="noopener noreferrer"> HAL </a></p></small>
-        {% endif %}<br>
+        <small><class="view"><a href="{{ site.HAL }}" target="HAL.widget" rel="noopener noreferrer"> HAL </a></p></small><br>
+        {% endif %}
 
         {% if site.researchgate %}
         <small><class="view"><a href="{{ site.researchgate }}" target="researchgate.widget" rel="noopener noreferrer"> ResearchGate </a></small>
