--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         {% endif %}
 
 	{% if site.HAL %}
-        <small><class="view"><a href="{{ site.HAL }}" target="HAL.widget" rel="noopener noreferrer"> HAL </a></p></small><br>
+        <small><class="view"><a href="{{ site.HAL }}" target="HAL.widget" rel="noopener noreferrer"> HAL </a><br></small>
         {% endif %}
 
         {% if site.researchgate %}
