--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,10 @@
         {% endif %}
 
 	<h2><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h2>
-
-	p {
-	  line-height: 0px;
-	}        
+     
 
         {% if site.orcid %}
-        <br><class="view"><a href="{{ site.orcid }}" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6261-8699</a><br>
+        <class="view"><a href="{{ site.orcid }}" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-6261-8699</a><br>
         {% endif %}
           
         <p>{{ site.description | default: site.github.project_tagline }}</p>	
