--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header style="background-color:grey;">
         
         {% if site.logo %}
           <img src="{{site.logo | absolute_url}}" width="230" alt="Logo" />
