--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         {% endif %}
         
         {% if site.gscholar %}
-        <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Goole Scholar </a></small>
+        <small><class="view"><a href="{{ site.gscholar }}" target="github.widget" rel="noopener noreferrer"> Google Scholar </a></small>
         {% endif %}
 
 	{% if site.HAL %}
